--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <script src="js/script.babel.js"></script>
   <script>
-  alert("Welcome to igi3");
+  alert("world of war");
   var audio = new Audio('strange-creature-talks-96872.mp3');
   audio.play();
   </script>
