--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 
   <script src="js/script.babel.js"></script>
   <script>
-  alert("world of war");
-	var x = document.getElementById("myAudio"); 
+  
+let song = new Audio('strange-creature-talks-96872.mp3');
 
-  x.play();
+  song.play();
   </script>
 </body>
 
