--- a/index.html
+++ b/index.html
@@ -31,9 +31,15 @@
   <script src="js/script.babel.js"></script>
   <script>
   
-let song = new Audio('strange-creature-talks-96872.mp3');
+  
+  function playSound () {
+  	alert("welcome 2 leg");
+	let ding = new Audio('strange-creature-talks-96872.mp3');
+	ding.play();
+}
 
-  song.play();
+playSound();
+
   </script>
 </body>
 
