--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
 </head>
 
 <body>
-<audio id="myAudio">
-  <source src="strange-creature-talks-96872.mp3" type="audio/mpeg">
-</audio>
+<<<
 
-<audio id="hahaha">
+<audio autoplay>
+  <source src="strange-creature-talks-96872.mp3" type="audio/mpeg">
+</audio><
+
+
+<audio autoplay id="haha" muted>
   <source src="evil-laugh-49831.mp3" type="audio/mpeg">
 </audio>
 
@@ -32,13 +35,7 @@
   <script>
   
   
-  function playSound () {
-  	alert("welcome 2 leg");
-	let ding = new Audio('strange-creature-talks-96872.mp3');
-	ding.play();
-}
 
-playSound();
 
   </script>
 </body>
