--- a/index.html
+++ b/index.html
@@ -15,16 +15,11 @@
 </head>
 
 <body>
-<<<
-
-<audio autoplay>
+<audio id="myAudio">
   <source src="strange-creature-talks-96872.mp3" type="audio/mpeg">
-</audio><
 
+</audio><br>
 
-<audio autoplay id="haha" muted>
-  <source src="evil-laugh-49831.mp3" type="audio/mpeg">
-</audio>
 
 
 
@@ -35,6 +30,14 @@
   <script>
   
   
+var x = document.getElementById("myAudio");
+
+function enableAutoplay() { 
+  x.autoplay = true;
+  x.load();
+}
+
+enableAutoplay();
 
 
   </script>
