--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
 </head>
 
 <body>
-<audio id="myAudio">
+
+
+<audio id="haha">
   <source src="strange-creature-talks-96872.mp3" type="audio/mpeg">
 
 </audio><br>
 
-
+<audio src="strange-creature-talks-96872.mp3"></audio>
 
 
 
@@ -30,15 +32,11 @@
   <script>
   
   
-var x = document.getElementById("myAudio");
-
-function enableAutoplay() { 
-  x.autoplay = true;
-  x.load();
-}
-
-enableAutoplay();
-
+window.addEventListener("DOMContentLoaded", event => {
+  const audio = document.querySelector("audio");
+  audio.volume = 0.6;
+  audio.play();
+});
 
   </script>
 </body>
