--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   
   <title>Universum soldier<<</title>
 
@@ -17,12 +18,12 @@
 <body>
 
 
-<audio id="haha">
-  <source src="strange-creature-talks-96872.mp3" type="audio/mpeg">
-
-</audio><br>
-
 <audio src="strange-creature-talks-96872.mp3"></audio>
+<button id="button">
+  <i class="fas fa-volume-up"></i>
+</button>
+
+
 
 
 
